# pico

./: CMakeLists.txt  README.md
blink/: CMakeLists.txt
breathing-light/: CMakeLists.txt  breathing-light.c
button-blink/: CMakeLists.txt  button-blink.c
external-blink/: CMakeLists.txt  external-blink.c
on-off-switch/: CMakeLists.txt  on-off-switch.c
projects/01_blink/: CMakeLists.txt  README.md
projects/02_external_blink/: CMakeLists.txt
projects/03_breathing_light/: README.md
projects/04_button_blink/: CMakeLists.txt  README.md
projects/06_waterfall/: CMakeLists.txt  README.md
projects/07_pwm_waterfall/: CMakeLists.txt  README.md  pwm-waterfall.c
projects/08_rgb_light/: CMakeLists.txt  README.md  rgb-light.c
projects/blink/: CMakeLists.txt  README.md  blink.c
projects/breathing-light/: CMakeLists.txt
projects/button-blink/: CMakeLists.txt
projects/external-blink/: CMakeLists.txt  README.md
projects/on-off-switch/: CMakeLists.txt  README.md
projects/waterfall/: CMakeLists.txt  README.md  waterfall.c
waterfall/: CMakeLists.txt
